--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,31 +75,15 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
+    // Dagger
+    apt 'com.google.guava:guava:19.0'
+    compile 'com.google.dagger:dagger:2.3'
+    apt 'com.google.dagger:dagger-compiler:2.3'
 
     // Schematic
     apt 'net.simonvt.schematic:schematic-compiler:0.6.7'
     compile 'net.simonvt.schematic:schematic:0.6.7'
 
-    // Dagger
-    apt 'com.google.guava:guava:19.0'
-    apt 'com.google.dagger:dagger-compiler:2.3'
-
-    // Unit test build
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
-
-    androidTestCompile 'com.android.support:support-annotations:23.3.0'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-    androidTestCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
-    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
 
 // Get the path to ADB.  Required when running tests directly from Android Studio.
